<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="app_name">ElorChat</string>
    <string name="room_database_name" translatable="false">ElorChat_Db</string>
    <string name="root_preferences">RootPreferences</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_registration">Registro</string>
    <string name="reconnecting">Reconectando</string>
    <string name="noWifi">Problemas con al conexion Wifi</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="login">Conectarse</string>
    <string name="resetPassword">Has olvidado la contraseña?</string>
    <string name="register">Registrarse</string>
    <string name="wrongLogin">Usuario o contraseña incorrectos</string>
    <string name="name">Nombre</string>
    <string name="surname1">Primer Apellido</string>
    <string name="surname2">Segundo Apellido</string>
    <string name="documentation">DNI</string>
    <string name="address">Direccion</string>
    <string name="telephone1">Telefono 1</string>
    <string name="telephone2">Telefono 2</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="repeatPassword">Repita contraseña</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="back">Volver</string>
    <string name="termsOfUse">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium, tellus sed bibendum scelerisque, ante nisi venenatis quam, bibendum posuere ex neque nec neque. Donec imperdiet neque non enim ornare vestibulum. Proin sit amet ipsum nunc. Nam vitae imperdiet augue. Fusce dictum ornare pharetra. Suspendisse aliquam ex mi, vitae rutrum elit ullamcorper fermentum. Aenean odio magna, viverra id neque in, fringilla auctor ante. Praesent eu felis aliquet, consequat nunc quis, eleifend augue. Maecenas volutpat sed arcu nec tincidunt.
    Cras efficitur laoreet mi et auctor. Nullam nec feugiat nunc. Aliquam tempor ultrices lectus feugiat viverra. Phasellus commodo, nisl vitae gravida gravida, metus magna iaculis mauris, et efficitur ex felis quis justo. Ut non lectus nisi. Phasellus ut molestie purus, at fringilla tellus. Nunc efficitur lacinia erat ut sodales. Aliquam sodales imperdiet aliquam. Vestibulum purus lorem, scelerisque pulvinar sodales sed, faucibus at nunc. Suspendisse potenti. Donec quis nunc volutpat, auctor sapien eu, blandit dolor. Aenean dictum a sapien id viverra. Suspendisse imperdiet consectetur lorem sit amet tempus. </string>
    <string name="termsOfUseCheckBox">Estoy de acuerdo con las condiciones de uso y con vender mi alma al diablo.</string>
    <string name="passwordDontMatch">Las contraseñas no coinciden</string>
    <string name="passwordValidationLenth">La longitud de la contraseña debe de ser mayor a 8</string>
    <string name="notEqualPassword">La contraseña no es identica</string>
    <string name="wrongFormatPassword">La contraseña debe tener un digito (0-9), una letra (a-z) y un simbolo</string>
    <string name="inputEmpty">Es obligatorio rellenar el campo</string>
    <string name="registerErrorPhoto">Error al almacenar la foto</string>
    <string name="nameChat">nombre del chat</string>
    <string name="newChat">crear chat</string>
    <string name="chats">Chats</string>
    <string name="settings">Ajustes</string>
    <string name="wifiIsConnected">Wifi On</string>
    <string name="wifiIsDisconnected">Wifi Off</string>
    <string name="header_visual">Visual</string>
    <string name="language">Lenguaje</string>
    <string name="theme">Tema</string>
    <string name="theme_dark">Oscuro</string>
    <string name="theme_light">Claro</string>
    <string name="theme_auto" translatable="false">Auto</string>
    <string name="theme_value_auto" translatable="false">Auto</string>
    <string name="theme_value_light" translatable="false">Light</string>
    <string name="theme_value_dark" translatable="false">Dark</string>
    <string name="language_spanish">Español</string>
    <string name="language_english">Ingles</string>
    <string name="language_basque">Euskera</string>
    <string name="language_value_spanish" translatable="false">es</string>
    <string name="language_value_english" translatable="false">en_US</string>
    <string name="language_value_basque" translatable="false">eu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="chats_name">Nombre del chat</string>
    <string name="last_messaga">Ultimo mensaje</string>
    <string name="last_message_time">00:00</string>
    <string name="agregarPersona">agregar persona</string>
    <string name="eliminarPersona">eliminar persona</string>
    <string name="enterMessage">Enviar mensaje</string>
    <string name="send">Enviar</string>
    <string name="photo">Foto</string>
    <string name="file">Archivo</string>
    <string name="location">Ubicación</string>
    <string name="email">Email</string>
    <string name="recover">Enviar email</string>
    <string name="recoverPasswordEmail">Recuperar contraseña</string>
</resources>