<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_visual">

        <ListPreference
            app:defaultValue="language_spanish"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="theme_light"
            app:entries="@array/themes_entries"
            app:entryValues="@array/themes_values"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>