<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/action_dropdown_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <item
            android:id="@+id/action_location"
            android:icon="@drawable/baseline_add_24"
            android:orderInCategory="100"
            android:title="@string/location"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_file"
            android:icon="@drawable/baseline_add_24"
            android:orderInCategory="100"
            android:title="@string/file"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_photo"
            android:icon="@drawable/baseline_add_24"
            android:orderInCategory="100"
            android:title="@string/photo"
            app:showAsAction="never" />
    </group>
</menu>
