<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RecoverPasswordFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnButton"
        app:srcCompat="@drawable/elorrieta_logo" />

    <Button
        android:id="@+id/recoverPasswordButton"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="98dp"
        android:text="@string/recover"
        app:layout_constraintBottom_toTopOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverPasswordEmail" />

    <EditText
        android:id="@+id/recoverPasswordEmail"
        android:layout_width="352dp"
        android:layout_height="67dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverPasswordEmailText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="140dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/recoverPasswordEmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elorchat_recortada" />

    <TextView
        android:id="@+id/recoverPasswordEmailText"
        android:layout_width="329dp"
        android:layout_height="34dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:text="@string/recoverPasswordEmail"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recoverPasswordEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverPasswordButton" />
</androidx.constraintlayout.widget.ConstraintLayout>