<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.auth.AuthChangePasswordFragment">


    <ImageView
        android:layout_width="248dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        app:srcCompat="@drawable/elorrieta_logo" />

    <EditText
        android:id="@+id/changePassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/changePassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="404dp"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        android:text="@string/changePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword2"
        app:layout_constraintVertical_bias="0.975" />

    <ImageView
        android:layout_width="158dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/changePassword1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        app:srcCompat="@drawable/elorchat_recortada" />

    <Button
        android:id="@+id/changePasswordBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton"
        app:layout_constraintVertical_bias="0.779" />

    <TextView
        android:id="@+id/textViewPassCorta"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:text="@string/passwordValidationLenth"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/changePassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewContraseñasNoCoinciden"
        android:layout_width="209dp"
        android:layout_height="23dp"
        android:text="@string/passwordDontMatch"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword2"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>